--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.biometric:biometric:1.1.0'
+    implementation 'androidx.room:room-runtime:2.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
