--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,14 @@ android {
     }
 }
 
+def room_version = "2.3.0"
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    kapt "android.arch.lifecycle:compiler:1.1.0"
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -61,8 +62,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.biometric:biometric:1.1.0'
-    implementation 'androidx.room:room-runtime:2.4.3'
-    kapt "android.arch.persistence.room:compiler:1.0.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
