--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment_unit_4"
         tools:targetApi="31">
+        <service
+            android:name=".MainActivity"
+            android:foregroundServiceType="location" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
