--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ def room_version = "2.3.0"
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.activity:activity-ktx:1.2.0-alpha08'
+    implementation 'androidx.fragment:fragment:1.3.0-alpha08'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
