--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation 'androidx.biometric:biometric:1.1.0'
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
     kapt "androidx.room:room-compiler:$room_version"
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     testImplementation 'junit:junit:4.13.2'
